<resources>
    <string name="app_name">Foody</string>
    <string name="caption">For the food lovers. Food on the go anywhere and everywhere</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="door_open">doorOpen</string>
    <string name="door_close">doorClose</string>
    <string name="tell_us_more_about_yourself">Tell us more about yourself</string>
    <string name="save">Save</string>
    <string name="your_image">Your image</string>
</resources>
